--- a/package.json
+++ b/package.json
@@ -1,25 +1,36 @@
 {
-  "name": "Kekstagram",
-  "version": "1.0.0",
   "private": true,
-  "description": "Личный проект «Киноман» от HTML Academy",
   "scripts": {
-    "eslint": "eslint src/**/*.js",
+    "eslint": "eslint --ext .jsx --ext .js src/",
     "test": "npm run eslint",
-    "build": "webpack --mode development",
-    "start": "webpack-dev-server --open"
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --mode development --hot --host 0.0.0.0"
   },
   "devDependencies": {
-    "eslint": "7.13.0",
-    "eslint-config-htmlacademy": "0.6.0",
-    "webpack": "4.44.2",
+    "@babel/core": "7.12.10",
+    "@babel/preset-env": "7.12.11",
+    "@babel/preset-react": "7.12.10",
+    "babel-loader": "8.2.2",
+    "css-loader": "5.0.2",
+    "eslint": "7.18.0",
+    "eslint-config-htmlacademy": "2.1.0",
+    "eslint-plugin-react": "7.22.0",
+    "file-loader": "6.2.0",
+    "style-loader": "2.0.0",
+    "webpack": "4.46.0",
     "webpack-cli": "3.3.12",
-    "webpack-dev-server": "3.11.0"
+    "webpack-dev-server": "3.11.2"
   },
   "engines": {
-    "node": "12"
+    "node": ">=12.0.0"
   },
   "dependencies": {
-    "dayjs": "1.9.5"
+    "axios": "0.21.1",
+    "nanoid": "3.1.20",
+    "prop-types": "15.7.2",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
+    "react-router-dom": "5.2.0",
+    "reselect": "4.0.0"
   }
 }
